<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.slaq.slaqworx</groupId>
  <artifactId>panoptes</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>panoptes</name>
  <url>https://github.com/ubergeek801/panoptes</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>

    <micronaut.version>2.3.2</micronaut.version>
  </properties>

  <modules>
    <module>panoptes-bootstrap</module>
    <module>panoptes-common</module>
    <module>panoptes-core</module>
    <module>panoptes-core-test</module>
    <module>panoptes-flink</module>
    <module>panoptes-jet</module>
    <module>panoptes-ui</module>
    <module>panoptes-worker</module>
  </modules>

  <repositories>
    <!-- bintray is sometimes needed for fresh Micronaut releases -->
    <repository>
      <id>micronaut</id>
      <url>https://dl.bintray.com/micronaut/core-releases-local</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!-- and for ktor too, it seems -->
    <repository>
      <id>ktor</id>
      <url>https://dl.bintray.com/kotlin/ktor</url>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <!-- create Docker images for applications -->
        <plugin>
          <groupId>com.google.cloud.tools</groupId>
          <artifactId>jib-maven-plugin</artifactId>
          <version>2.7.1</version>
        </plugin>
        <!-- enable Micronaut-related Maven actions -->
        <plugin>
          <groupId>io.micronaut.build</groupId>
          <artifactId>micronaut-maven-plugin</artifactId>
          <version>1.1.5</version>
        </plugin>
        <!-- process the Micronaut annotations -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
            <annotationProcessorPaths>
              <path>
                <groupId>io.micronaut</groupId>
                <artifactId>micronaut-inject-java</artifactId>
                <version>${micronaut.version}</version>
              </path>
              <path>
                <groupId>io.micronaut.data</groupId>
                <artifactId>micronaut-data-processor</artifactId>
                <version>2.1.1</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <!-- use a Surefire plugin recent enough for JUnit Jupiter -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
        <!-- produce build-info to include in application packages -->
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>2.4.2</version>
        </plugin>
        <!-- produce git-info to include in application packages -->
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>4.0.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.2.3</version>
      </dependency>
      <dependency>
        <groupId>com.hazelcast</groupId>
        <artifactId>hazelcast</artifactId>
        <version>4.1.1</version>
      </dependency>
      <dependency>
        <groupId>com.hazelcast</groupId>
        <artifactId>hazelcast-kubernetes</artifactId>
        <version>2.2.1</version>
      </dependency>
      <dependency>
        <groupId>io.micronaut</groupId>
        <artifactId>micronaut-bom</artifactId>
        <version>${micronaut.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.11</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
